Can now redirect to websites by using short url id

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 # MONGO_URI=mongodb://john:N1teLockon@ds035787.mlab.com:35787/jwfccmongodb;
+MONGO_URI='mongodb://john:N1teLockon@ds035787.mlab.com:35787/jwfccmongodb'
